--- a/templates/apps/info.html
+++ b/templates/apps/info.html
@@ -1,9 +1,9 @@
-{% extends 'apps/base.html' %}
+{% extends 'company/base.html' %}
 {% load static %}
 
 {% block content %}
 
-<div class='content_main'>
+<div class='content_main_info'>
   {% for view_list in object_list %}
   <div class='topic'>
     <div class='back_botton'>
