--- a/templates/company/create_form.html
+++ b/templates/company/create_form.html
@@ -1,4 +1,4 @@
-{% extends "apps/base.html" %}
+{% extends "company/base.html" %}
 {% block content %}
 <div class='article'>
   <div class='article_form'>
