--- a/templates/company/base.html
+++ b/templates/company/base.html
@@ -3,105 +3,119 @@
 <html lang="ja">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
 
-    <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
 
-    <title>roomii</title>
+  <title>roomii</title>
 </head>
-<body>
-    <!-- ナビバー -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">roomii</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          {% if user.is_staff is False %}
-            {% if user.is_authenticated %}
-            <li>
-              <a class="nav-item nav-link" href="{% url 'register:top'%}">TOP</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="{% url 'register:user_detail' user.username user.pk   %}">マイページ</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-item nav-link" href="{% url 'register:login' %}">
-                 ゲストログインはこちら
-              </a>
-              <a class="nav-item nav-link" href="{% url 'register:customer_login' %}">
-                 業者の方はこちら
-              </a>
-            </li>
-            {% endif %}
+<body>
+
+  <!-- ナビバー -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    {% if user.is_authenticated %}
+      <a class="navbar-brand" href="#">roomii</a>
+    {% else %}
+      <a class="navbar-brand" href="{% url 'apps:top' %}">roomii</a>
+    {% endif %}
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        {% if not user.is_staff %}
+          {% if user.is_authenticated %}
+          <li>
+            <a class="nav-item nav-link" href="{% url 'register:top'%}">TOP</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.username user.pk %}">マイページ</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
+          </li>
           {% else %}
-            {% if user.is_authenticated %}
-            <li>
-              <a class="nav-item nav-link" href="{% url 'register:top'%}">TOP</a>
-            </li>
-            {% if user.is_company %}
-            <li>
-              <a class="nav-item nav-link" href="{% url 'apps:company_change' %}">業者情報編集</a>
-            </li>
-            {% else%}
-            {% endif %}
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="{% url 'register:login' %}">
+               ゲストログインはこちら
+            </a>
+      
+          </li>
+          {% endif %}
+        {% else %}
+          {% if user.is_authenticated %}
+          <li>
+            <a class="nav-item nav-link btn_sidebar" data-action="toggle" data-side="left" href="javascript:void(0)">ダッシュボード</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="{% url 'register:top'%}">TOP</a>
+          </li>
+          {% if user.is_company %}
+          <li>
+            <a class="nav-item nav-link" href="{% url 'apps:company_change' %}">業者情報編集</a>
+          </li>
+          {% else%}
+          {% endif %}
+          {% if count_over %}
             <li>
               <a class="nav-item nav-link" href="{% url 'apps:company' %}">物件登録</a>
             </li>
+          {% else %}
             <li>
-              <a class="nav-item nav-link" href="{% url 'register:user_detail' user.username user.pk %}">マイページ</a>
+              <a class="nav-item nav-link" href="{% url 'apps:company' %}">アップグレード</a>
             </li>
-            <li>
-              <a class="nav-item nav-link" href="{% url 'register:user_detail' user.username user.pk %}">メッセージBox</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-item nav-link" href="{% url 'register:login' %}">
-                 ゲストログインはこちら
-              </a>
-              <a class="nav-item nav-link" href="{% url 'register:customer_login' %}">
-                 業者の方はこちら
-              </a>
-            </li>
-            {% endif %}
           {% endif %}
-       </ul>
-      </div>
-    </nav>
-
-    <!-- メインコンテント -->
-    <div class="container mt-3">
-        {% block content %}{% endblock %}
+          <li>
+            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.username user.pk %}">マイページ</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.username user.pk %}">メッセージBox</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="{% url 'register:login' %}">
+               ゲストログインはこちら
+            </a>
+            
+          </li>
+          {% endif %}
+        {% endif %}
+      </ul>
     </div>
+  </nav>
+  
+      
+  {% block content %}{% endblock %}
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <!-- <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sidebar/3.1.0/jquery.sidebar.min.js"></script>
+  <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
+  {% block extrajs %}{% endblock %}
+  <script src="{% static 'js/jquery.inview-master/jquery.inview.js' %}"></script>
+  <script src="{% static 'js/jquery-scrollfade-master/jquery.scrollfade.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'js/slick.css' %}"/>
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'js/fonts/slick.woff' %}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'js/fonts/slick.ttf' %}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'js/ajax-loader.gif' %}"/> -->
+  <link rel="stylesheet" type="text/css" href="{% static 'js/slick-theme.css' %}"/>
+  <script type="text/javascript" src="{% static 'js/slick.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-            integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-            integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-            crossorigin="anonymous"></script>
-
-    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
+
 </html>
