--- a/templates/apps/login_after.html
+++ b/templates/apps/login_after.html
@@ -17,6 +17,7 @@
 
 
 <body>
+  
   <div class='login_after'>
     <div class='login_after_title'>
       <p>ようこそ！、roomiiへ！！</p>
@@ -93,6 +94,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'js/ajax-loader.gif' %}"/> -->
   <link rel="stylesheet" type="text/css" href="{% static 'js/slick-theme.css' %}" />
   <script type="text/javascript" src="{% static 'js/slick.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/user_os.js' %}"> </script>  
   <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 </body>
