--- a/templates/register/base.html
+++ b/templates/register/base.html
@@ -66,8 +66,7 @@
             integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
             crossorigin="anonymous"></script>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-
-
+    <script type="text/javascript" src="{% static 'js/user_os.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 
